# simpledspy

./: LICENSE  README.md  dsp_modules.py  example.py  main.py  metrics.py  module_factory.py  pipe_function.py  pipeline_manager.py  plan.md  pyproject.toml
simpledspy/: __init__.py  cli.py  module_factory.py  optimization_manager.py  pipe.py  pipeline_manager.py
tests/: test_example.py
